fix white-space and spacing

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -239,7 +239,8 @@
   }
 }
 .rootMenu {
-  min-width: 227px;
+  width: 227px;
+  max-width: 227px;
   top: 45px !important;
 }
 .menuAction {
@@ -383,7 +384,8 @@
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 5px;
-  margin-left: 6px;
+  margin-left: 7px;
+  white-space: inherit;
 }
 .itemsOfToggle:not(:first-child)> a {
   color: rgba(28, 28, 28, 0.9);
@@ -394,12 +396,12 @@
   border: none;
   border-left: 4px solid rgba(166, 204, 23, 1);
   margin-left: 15px;
+  padding: 0px;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
-  padding-left:  15px ;
+  padding: 7px 0px 7px 15px ;
   margin-top: 15px;
-  height: 36px;
   margin-left: 24px;
 }
 .itemsOfToggle:first-child >a{
